@startuml   4to EP
left to right direction
skinparam packageStyle rectangle
skinparam nodesep 100 
skinparam ranksep 100
skinparam classFontSize 12
skinparam classFontName "Arial"
skinparam classAttributeIconSize 0
skinparam linetype ortho
scale 5
hide circle

' ENTIDADES PRINCIPALES

entity "Clientes" as clientes {
  *id_cliente : INT <<PK>>
  --
  nombre : VARCHAR(50)
  apellido : VARCHAR(50)
  email : VARCHAR(100) <<Unique>>
  telefono : VARCHAR(20)
  direccion : TEXT
  fecha_registro : DATETIME
}

entity "Pedidos" as pedidos {
  *id_pedido : INT <<PK>>
  --
  *id_cliente : INT <<FK>>
  fecha_pedido : DATETIME
  estado : ENUM('Pendiente', 'Enviado', 'Entregado')
}

entity "Productos" as productos {
  *id_producto : INT <<PK>>
  --
  nombre : VARCHAR(100)
  descripcion : TEXT
  precio : DECIMAL(10,2)
  stock : INT
}

' ENTIDADES TRANSACCIONALES / DETALLES

entity "Detalle_Pedido" as detalle {
  *id_detalle : INT <<PK>>
  --
  *id_pedido : INT <<FK>>
  *id_producto : INT <<FK>>
  cantidad : INT
  precio_unitario : DECIMAL(10,2)
}

entity "Pagos" as pagos {
  *id_pago : INT <<PK>>
  --
  *id_pedido : INT <<FK>>
  monto : DECIMAL(10,2)
  fecha_pago : DATETIME
  metodo_pago : VARCHAR(50)
  estado : ENUM('Pendiente', 'Completado')
}

' RELACIONES Y CARDINALIDADES

' Un Cliente realiza muchos Pedidos (1:N)
clientes ||..o{ pedidos : "1..* realiza"

' Un Pedido tiene muchos Detalles (1:N)
pedidos ||..|{ detalle : "1..* contiene"

' Un Producto aparece en muchos Detalles (1:N)
productos ||..o{ detalle : "1..* listado en"

' Un Pedido genera Pagos (1:N)
pedidos ||..o{ pagos : "1..* genera"

@enduml